# CM-Lab4

./: CMakeLists.txt  input.txt  ui.ui
include/: calculator.hpp  file_parser.hpp  mainwindow.hpp  math_function.hpp  table_event_handler.hpp  ui_mainwindow.hpp
src/: main.cpp  mainwindow.cpp
